# ChangeLog for media-sound/soundkonverter
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/soundkonverter/ChangeLog,v 1.43 2014/03/14 08:18:39 kensington Exp $

*soundkonverter-2.1.0 (14 Mar 2014)

  14 Mar 2014; Michael Palimaka <kensington@gentoo.org>
  +soundkonverter-2.1.0.ebuild:
  Version bump.

*soundkonverter-2.0.4 (03 Nov 2013)

  03 Nov 2013; Johannes Huber <johu@gentoo.org> +soundkonverter-2.0.4.ebuild:
  Version bump wrt bug #490086.

  01 Nov 2013; Johannes Huber <johu@gentoo.org> -soundkonverter-1.6.4.ebuild:
  Remove old.

  01 Nov 2013; Agostino Sarubbo <ago@gentoo.org> soundkonverter-2.0.3.ebuild:
  Stable for x86, wrt bug #489492

  26 Oct 2013; Agostino Sarubbo <ago@gentoo.org> soundkonverter-2.0.3.ebuild:
  Stable for amd64, wrt bug #489492

*soundkonverter-2.0.3 (28 Jun 2013)

  28 Jun 2013; Johannes Huber <johu@gentoo.org> +soundkonverter-2.0.3.ebuild,
  -soundkonverter-2.0.2.ebuild:
  Version bump wrt bug #475148. Remove old.

*soundkonverter-2.0.2 (21 May 2013)

  21 May 2013; Johannes Huber <johu@gentoo.org> +soundkonverter-2.0.2.ebuild:
  Version bump wrt bug #470834.

  26 Feb 2013; Michael Palimaka <kensington@gentoo.org>
  -soundkonverter-1.6.3.ebuild:
  Remove old.

  26 Feb 2013; Agostino Sarubbo <ago@gentoo.org> soundkonverter-1.6.4.ebuild:
  Stable for x86, wrt bug #459248

  26 Feb 2013; Agostino Sarubbo <ago@gentoo.org> soundkonverter-1.6.4.ebuild:
  Stable for amd64, wrt bug #459248

*soundkonverter-1.6.4 (18 Jan 2013)

  18 Jan 2013; Michael Palimaka <kensington@gentoo.org>
  +soundkonverter-1.6.4.ebuild, -soundkonverter-1.6.2.ebuild:
  Version bump wrt bug #452236. Remove old.

*soundkonverter-1.6.3 (29 Jul 2012)

  29 Jul 2012; Michael Palimaka <kensington@gentoo.org>
  +soundkonverter-1.6.3.ebuild, -soundkonverter-1.6.1.ebuild:
  Version bump, remove old.

*soundkonverter-1.6.2 (27 Jun 2012)

  27 Jun 2012; Michael Palimaka <kensington@gentoo.org>