@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/soundkonverter
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/soundkonverter/ChangeLog,v 1.43 2014/03/14 08:18:39 kensington Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/soundkonverter/ChangeLog,v 1.44 2014/03/15 07:31:23 kensington Exp $
+
+  15 Mar 2014; Michael Palimaka <kensington@gentoo.org>
+  soundkonverter-2.0.3.ebuild, soundkonverter-2.0.4.ebuild,
+  soundkonverter-2.1.0.ebuild:
+  Add missing sys-devel/gettext dependency by Nikoli <nikoli@gmx.us> wrt bug
+  #504656.
 
 *soundkonverter-2.1.0 (14 Mar 2014)
 
